--- a/src/MyWeb/MyWeb.csproj
+++ b/src/MyWeb/MyWeb.csproj
@@ -4,5 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ITfoxtec.Identity.Saml2.MvcCore" Version="4.0.5" />
+  </ItemGroup>
 
 </Project>
